# DUALEXTENDDISPLAY

./: README.md  metadata.json  package.json  server.ts
native/: CMakeLists.txt
native/client/: AndroidManifest.xml  GpuRenderer.cpp  HardwareDecoder.kt  HardwareDecoder.swift  Podfile  build.gradle  proguard-rules.pro
native/driver/: DriverIOCTL.h  IndirectDisplayDriver.cpp  IndirectDisplayDriver.inf  IndirectDisplayDriver.vcxproj  InstallDriver.bat  SignDriver.ps1  UninstallDriver.bat
native/host/: AudioCapture.cpp  Benchmark.cpp  D3D11Capture.cpp  GpuEncoder.cpp  InputDeviceControl.cpp  MonitorArrangement.cpp  RtpPacketizer.cpp  UdpTransport.cpp  UsbTransport.cpp  WindowsGraphicsCapture.cpp
release/android/: AeroDisplay.apk
release/docs/: setup.md
release/ios/: AeroDisplay.ipa
release/windows/: AeroDisplay.msi  IndirectDisplayDriver.inf  Install.bat  Uninstall.bat
src/: App.tsx  index.css  remoteDisplayCodebase.ts  types.ts
src/components/: ClientViewportSimulator.tsx  HostMonitorManager.tsx  NativeEngineLab.tsx  NetworkDiagnosticsLab.tsx  PolicyManager.tsx  SourceCodeExplorer.tsx
